Simplify some conditional statements.